--- a/css/main.css
+++ b/css/main.css
@@ -14,13 +14,48 @@ html {
 
   font-size: 100%;
   line-height: 1.3;
+  font-family: "Ubuntu", sans-serif;
 }
 
 *, *::before, *::after {
 	box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
 
+h1 {
+  background-color: #18294f;
+  color: #fff;
+
+  padding: .5em;
+  text-align: center;
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+
+  padding-left: 0;
+  margin: 0;
+}
+
+ul li {
+  background-color: #18294f;
+}
+
+nav a {
+  display: block;
+  padding: .5em;
+  text-decoration: none;
+  color: #6c8fe0;
+}
+
+nav a:hover {
+  color: #fff;
+  background-color: #6c8fe0;
+}
 @media only screen and (min-width: 25em) {
 
 }
