--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ header {
   overflow: hidden;
 }
 
-h1 {
+header h1 {
   color: #fff;
 
   padding: .5em;
@@ -38,7 +38,7 @@ h1 {
   margin: 0;
 }
 
-ul {
+nav ul {
   list-style-type: none;
 
   padding-left: 0;
